apps/webdav/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdav-external
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: webdav.progist.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdav-proxy
            port:
              number: 80
  tls:
  - hosts:
    - webdav.progist.ru
    secretName: webdav-external-tls
